BLD Adds base url

--- a/layouts/partials/reveal-hugo/body.html
+++ b/layouts/partials/reveal-hugo/body.html
@@ -9,8 +9,8 @@
         }
     };
 </script>
-<script type="text/javascript" id="MathJax-script" async src="javascript/tex-svg.js" />
+<script type="text/javascript" id="MathJax-script" async src="{{ .Site.BaseURL }}/javascript/tex-svg.js" />
 </script>
 {{ end }}
 
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="{{ .Site.BaseURL }}/favicon.ico">
