DOC Update style

--- a/assets/custom-theme.scss
+++ b/assets/custom-theme.scss
@@ -215,3 +215,9 @@ div.reveal {
   font-style: normal;
   font-weight: bold;
 }
+
+.reveal section img {
+  margin: 0;
+  border: none;
+  box-shadow: none;
+}
