--- a/assets/custom-theme.scss
+++ b/assets/custom-theme.scss
@@ -243,3 +243,30 @@ li {
 .reveal strong {
   color: #008000;
 }
+
+.g-success {
+    background-color: rgba(40,167,69,0.25);
+    border: 2px solid rgb(40,167,69);
+    border-radius: 5px;
+    width: 95%;
+    display: block;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin: 0 0.5rem;
+}
+
+.g-alert {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 2px solid #f5c6cb;
+    border-radius: 5px;
+    width: 95%;
+    display: block;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin: 0 0.5rem;
+}
+
+span.hljs-comment {
+  color: #c1b065;
+}
